# gazebo_ref_pompd

./: .gitignore  LICENSE  README.md  benchmark.sh  generate_visualization.py  package.xml  process_log.py  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pomdp-py/share/pomdp-py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ref_pomdp_neurips23/share/ref_pomdp_neurips23/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ref_pomdp_neurips23/share/ref_pomdp_neurips23/launch/: launch.py  my_simulation_launch.py
launch/: launch.py
pomdp_py/algorithms/: a_star.py  ref_solver_clean.py  value_iteration.py
pomdp_py/utils/: benchmark.py
problems/gridworld/: domain.py  grid_map.py  gridworld_dzs_20x20.py  gridworld_dzs_60x60.py  gridworld_rand_obstacles_scalable.py  models.py  problem.py  utils.py
simulator/: dummy.py  ref_solver_node.py  testnode.py
simulator/robots/Dubin/: Dubin.sdf
simulator/robots/dubin/: dubin.sdf  model.config
simulator/worlds/: nav1.world
simulator/worlds/DubinMaze/: DubinMazeEnvironment.sdf
