<?xml version="1.0"?>
<package format="3">
  <name>ref_pomdp_neurips23</name>
  <version>1.0.0</version>
  <description>POMDP Library integrated with ROS 2 for simulation</description>

  <maintainer email="edward.kim@anu.edu.au">Edward Kim</maintainer>

  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>  <!-- ROS 2 Python client library -->
  <depend>gazebo_ros</depend>  <!-- Gazebo integration with ROS 2 (if needed) -->

  <!-- Your Python libraries from setup.py can also be dependencies -->
  <depend>numpy</depend>
  <depend>scipy</depend>
  <depend>tqdm</depend>
  <depend>matplotlib</depend>
  <depend>pygame</depend>
  <depend>opencv-python</depend>

  <exec_depend>launch</exec_depend>

  <!-- Export section for ROS 2 Python-based package -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

